other-vpol/require-ingress-https/.kyverno-test/resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kyverno.io/foo: bar
    kubernetes.io/ingress.allow-http: "true"
  name: badingress01
spec:
  ingressClassName: someingress
  rules:
  - host: endpoint01
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - endpoint01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress02
  annotations:
    kyverno.io/foo: bar
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress-empty-tls
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls: []
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress03
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint01
    - endpoint02
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kyverno.io/foo: bar
    kubernetes.io/ingress.allow-http: "false"
  name: badingress04
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kyverno.io/foo: bar
    kubernetes.io/ingress.allow-http: "false"
  name: goodingress01
spec:
  ingressClassName: someingress
  rules:
  - host: endpoint01
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - endpoint01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kyverno.io/foo: bar
  name: goodingress02
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint01
    - endpoint02
