other-vpol/require-ingress-https/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-ingress-https
policies:
- ../require-ingress-https.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Ingress
  policy: require-ingress-https
  resources:
  - goodingress01
  - goodingress02
  result: pass
- isValidatingPolicy: true
  kind: Ingress
  policy: require-ingress-https
  resources:
  - goodingress01
  - goodingress02
  result: pass
- isValidatingPolicy: true
  kind: Ingress
  policy: require-ingress-https
  resources:
  - badingress01
  - badingress02
  - badingress03
  result: fail
- isValidatingPolicy: true
  kind: Ingress
  policy: require-ingress-https
  resources:
  - badingress04
  - badingress-empty-tls
  result: fail
